src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP003_UP003.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    TypeOfPrimitive: Str
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 8
  fix:
    content: str
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 8
  parent: ~
- kind:
    TypeOfPrimitive: Bytes
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 9
  fix:
    content: bytes
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 9
  parent: ~
- kind:
    TypeOfPrimitive: Int
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix:
    content: int
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 7
  parent: ~
- kind:
    TypeOfPrimitive: Float
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 8
  fix:
    content: float
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 8
  parent: ~
- kind:
    TypeOfPrimitive: Complex
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 8
  fix:
    content: complex
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 8
  parent: ~

