src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP007_UP007.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    UsePEP604Annotation: ~
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 22
  fix:
    content: str | None
    location:
      row: 6
      column: 9
    end_location:
      row: 6
      column: 22
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 10
    column: 9
  end_location:
    row: 10
    column: 29
  fix:
    content: str | None
    location:
      row: 10
      column: 9
    end_location:
      row: 10
      column: 29
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 14
    column: 9
  end_location:
    row: 14
    column: 45
  fix:
    content: "str | int | Union[float, bytes]"
    location:
      row: 14
      column: 9
    end_location:
      row: 14
      column: 45
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 14
    column: 25
  end_location:
    row: 14
    column: 44
  fix:
    content: float | bytes
    location:
      row: 14
      column: 25
    end_location:
      row: 14
      column: 44
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 31
  fix:
    content: str | int
    location:
      row: 18
      column: 9
    end_location:
      row: 18
      column: 31
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 22
    column: 9
  end_location:
    row: 22
    column: 33
  fix:
    content: str | int
    location:
      row: 22
      column: 9
    end_location:
      row: 22
      column: 33
  parent: ~
- kind:
    UsePEP604Annotation: ~
  location:
    row: 26
    column: 9
  end_location:
    row: 26
    column: 40
  fix:
    content: "(str, int) | float"
    location:
      row: 26
      column: 9
    end_location:
      row: 26
      column: 40
  parent: ~

