src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP009_UP009_1.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    PEP3120UnnecessaryCodingComment: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content: ""
    location:
      row: 2
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~

