src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP011_UP011_0.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 12
  fix:
    content: ""
    location:
      row: 5
      column: 10
    end_location:
      row: 5
      column: 12
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 11
    column: 20
  end_location:
    row: 11
    column: 22
  fix:
    content: ""
    location:
      row: 11
      column: 20
    end_location:
      row: 11
      column: 22
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 16
    column: 10
  end_location:
    row: 16
    column: 24
  fix:
    content: ""
    location:
      row: 16
      column: 10
    end_location:
      row: 16
      column: 24
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 21
    column: 20
  end_location:
    row: 21
    column: 34
  fix:
    content: ""
    location:
      row: 21
      column: 20
    end_location:
      row: 21
      column: 34
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 27
    column: 10
  end_location:
    row: 28
    column: 1
  fix:
    content: ""
    location:
      row: 27
      column: 10
    end_location:
      row: 28
      column: 1
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 33
    column: 10
  end_location:
    row: 35
    column: 1
  fix:
    content: ""
    location:
      row: 33
      column: 10
    end_location:
      row: 35
      column: 1
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 40
    column: 20
  end_location:
    row: 42
    column: 19
  fix:
    content: ""
    location:
      row: 40
      column: 20
    end_location:
      row: 42
      column: 19
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 47
    column: 20
  end_location:
    row: 51
    column: 1
  fix:
    content: ""
    location:
      row: 47
      column: 20
    end_location:
      row: 51
      column: 1
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 56
    column: 20
  end_location:
    row: 62
    column: 1
  fix:
    content: ""
    location:
      row: 56
      column: 20
    end_location:
      row: 62
      column: 1
  parent: ~
- kind:
    UnnecessaryLRUCacheParams: ~
  location:
    row: 67
    column: 20
  end_location:
    row: 72
    column: 1
  fix:
    content: ""
    location:
      row: 67
      column: 20
    end_location:
      row: 72
      column: 1
  parent: ~

